--- a/Evaluaciones/Proyecto Final/proyecto-esteban/app/index.html
+++ b/Evaluaciones/Proyecto Final/proyecto-esteban/app/index.html
@@ -2,13 +2,19 @@
 <html>
 
 <head>
-    <title>La Pokedex Xanxa</title>
+    <title>Proyecto Final Javascript Avanzado</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="apis.js"></script>
+    <script type="text/javascript" src="html-commons.js"></script>
+    <script type="text/javascript" src="users.js"></script>
+    <script type="text/javascript" src="usersLocal.js"></script>
+    <script type="text/javascript" src="bebidas.js"></script>
+    <script type="text/javascript" src="comidas.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
 
